requested changes (see email 2018-10-09)   * change font   * change color   * fix typos   * fix navbar color impressum   * add photo   * enlarge text   * uppercase headings

--- a/css/creative.css
+++ b/css/creative.css
@@ -4,11 +4,13 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
  */
 /*
- * Color Scheme: #81FF01
+ * Color Scheme: #93DC00
  */
 
 @font-face { font-family: Castorgate;
              src: url('/font/CASTOR__.ttf') format('truetype'); }
+@font-face { font-family: Corbert;
+             src: url('/font/Corbert-Regular.otf') format('opentype'); }
 
 body,
 html {
@@ -17,13 +19,14 @@ html {
 }
 
 body {
-  font-family: 'Times New Roman', serif;
+  font-family: Corbert, 'Times New Roman', serif;
+  font-size: 1.1em;
 }
 
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: #81FF01;
+  border-color: #93DC00;
 }
 
 hr.light {
@@ -31,7 +34,7 @@ hr.light {
 }
 
 hr.lg {
-  border-color: #81FF01;
+  border-color: #93DC00;
 }
 
 hr.dark {
@@ -42,14 +45,18 @@ table.noborder td, table.noborder th {
   border-width: 0px;
 }
 
+table {
+  margin-bottom: 0;
+}
+
 a {
-  color: #81FF01;
+  color: #93DC00;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
 a:hover {
-  color: #81FF01;
+  color: #93DC00;
 }
 
 h1,
@@ -58,12 +65,11 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Castorgate, 'Helvetica Neue', Arial, sans-serif !important;
-  letter-spacing: .1em;
+  font-family: Corbert, 'Helvetica Neue', Arial, sans-serif !important;
 }
 
 .bg-primary {
-  background-color: #81FF01 !important;
+  background-color: #93DC00 !important;
 }
 
 .bg-dark {
@@ -80,6 +86,7 @@ section {
 
 .section-heading {
   margin-top: 0;
+  text-transform: uppercase;
 }
 
 ::-moz-selection {
@@ -121,13 +128,13 @@ img::-moz-selection {
 #mainNav .navbar-brand {
   font-weight: 700;
   text-transform: uppercase;
-  color: #81FF01;
+  color: #93DC00;
   font-family: Castorgate, 'Helvetica Neue', Arial, sans-serif !important;
   letter-spacing: .1em;
 }
 
 #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #81FF01;
+  color: #93DC00;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link,
@@ -140,12 +147,12 @@ img::-moz-selection {
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
 #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-  color: #81FF01;
+  color: #93DC00;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link.active,
 #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
-  color: #81FF01 !important;
+  color: #93DC00 !important;
   background-color: transparent;
 }
 
@@ -160,7 +167,7 @@ img::-moz-selection {
 }
 
 .logo4-inline {
-  fill: #81FF01 !important;
+  fill: #93DC00 !important;
   -webkit-transition: all 0.25s;
   transition: all 0.25s;
 }
@@ -168,7 +175,7 @@ img::-moz-selection {
 @media (min-width: 992px) {
   #mainNav {
     border-color: transparent;
-    background-color: #81FF01;
+    background-color: #93DC00;
   }
   #mainNav .navbar-brand {
     color: rgba(0, 0, 0, 0.7);
@@ -198,13 +205,13 @@ img::-moz-selection {
     background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: #81FF01;
+    color: #93DC00;
   }
   #mainNav.navbar-shrink .navbar-brand .logo4-inline {
-    fill: #81FF01 !important;
+    fill: #93DC00 !important;
   }
   #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #81FF01;
+    color: #93DC00;
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
@@ -212,7 +219,7 @@ img::-moz-selection {
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-    color: #81FF01;
+    color: #93DC00;
   }
 }
 
@@ -331,7 +338,7 @@ header.masthead p {
 }
 
 .text-primary {
-  color: #81FF01 !important;
+  color: #93DC00 !important;
 }
 
 .text-dark {
@@ -343,8 +350,7 @@ header.masthead p {
   text-transform: uppercase;
   border: none;
   border-radius: 300px;
-  font-family: Castorgate, 'Helvetica Neue', Arial, sans-serif !important;
-  letter-spacing: .1em;
+  font-family: Corbert, 'Helvetica Neue', Arial, sans-serif !important;
 }
 
 .btn-xl {
@@ -352,8 +358,8 @@ header.masthead p {
 }
 
 .btn-primary {
-  background-color: #81FF01;
-  border-color: #81FF01;
+  background-color: #93DC00;
+  border-color: #93DC00;
   color: rgba(0,0,0,.7);
 }
 
@@ -368,10 +374,18 @@ header.masthead p {
 }
 
 .table th {
-  text-align: center!important;
+  text-align: left!important;
 }
 
 .font-logo {
   font-family: Castorgate, 'Helvetica Neue', Arial, sans-serif !important;
   letter-spacing: .1em;
+}
+
+.photo {
+  max-width: 100%;
+}
+
+a.email {
+  color: #212529;
 }
