--- a/css/creative.css
+++ b/css/creative.css
@@ -3,14 +3,6 @@
  * Copyright 2013-2018 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
  */
-/*
- * Color Scheme: #93DC00
- */
-
-@font-face { font-family: Castorgate;
-             src: url('/font/CASTOR__.ttf') format('truetype'); }
-@font-face { font-family: Corbert;
-             src: url('/font/Corbert-Regular.otf') format('opentype'); }
 
 body,
 html {
@@ -19,44 +11,27 @@ html {
 }
 
 body {
-  font-family: Corbert, 'Times New Roman', serif;
-  font-size: 1.1em;
+  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: #93DC00;
+  border-color: #F05F40;
 }
 
 hr.light {
   border-color: #fff;
 }
 
-hr.lg {
-  border-color: #93DC00;
-}
-
-hr.dark {
-  border-color: #212529;
-}
-
-table.noborder td, table.noborder th {
-  border-width: 0px;
-}
-
-table {
-  margin-bottom: 0;
-}
-
 a {
-  color: #93DC00;
+  color: #F05F40;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
 a:hover {
-  color: #93DC00;
+  color: #f05f40;
 }
 
 h1,
@@ -65,11 +40,11 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Corbert, 'Helvetica Neue', Arial, sans-serif !important;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .bg-primary {
-  background-color: #93DC00 !important;
+  background-color: #F05F40 !important;
 }
 
 .bg-dark {
@@ -86,7 +61,6 @@ section {
 
 .section-heading {
   margin-top: 0;
-  text-transform: uppercase;
 }
 
 ::-moz-selection {
@@ -119,8 +93,7 @@ img::-moz-selection {
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #fff;
-  font-family: Castorgate, 'Helvetica Neue', Arial, sans-serif !important;
-  letter-spacing: .1em;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
@@ -128,13 +101,12 @@ img::-moz-selection {
 #mainNav .navbar-brand {
   font-weight: 700;
   text-transform: uppercase;
-  color: #93DC00;
-  font-family: Castorgate, 'Helvetica Neue', Arial, sans-serif !important;
-  letter-spacing: .1em;
+  color: #F05F40;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #93DC00;
+  color: #f05f40;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link,
@@ -147,12 +119,12 @@ img::-moz-selection {
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
 #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-  color: #93DC00;
+  color: #F05F40;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link.active,
 #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
-  color: #93DC00 !important;
+  color: #F05F40 !important;
   background-color: transparent;
 }
 
@@ -161,40 +133,23 @@ img::-moz-selection {
   background-color: transparent;
 }
 
-#mainNav .navbar-logo {
-  height: 30px;
-  padding-right: 0.25em;
-}
-
-.logo4-inline {
-  fill: #93DC00 !important;
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-}
-
 @media (min-width: 992px) {
   #mainNav {
     border-color: transparent;
-    background-color: #93DC00;
+    background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: rgba(0, 0, 0, 0.7);
-  }
-  .logo4-inline {
-    fill: #212529 !important;
+    color: rgba(255, 255, 255, 0.7);
   }
   #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
     color: #fff;
-  }
-  #mainNav .navbar-brand:focus .logo4-inline, #mainNav .navbar-brand:hover .logo4-inline {
-    fill: #ffffff !important;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link {
     padding: 0.5rem 1rem;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link,
   #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(255, 255, 255, 0.7);
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
   #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
@@ -205,13 +160,10 @@ img::-moz-selection {
     background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: #93DC00;
-  }
-  #mainNav.navbar-shrink .navbar-brand .logo4-inline {
-    fill: #93DC00 !important;
+    color: #F05F40;
   }
   #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #93DC00;
+    color: #f05f40;
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
@@ -219,13 +171,16 @@ img::-moz-selection {
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-    color: #93DC00;
+    color: #F05F40;
   }
 }
 
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
+  background-image: url("../img/header.jpg");
+  background-position: center center;
+  background-size: cover;
 }
 
 header.masthead hr {
@@ -265,11 +220,6 @@ header.masthead p {
   }
 }
 
-.masthead-logo {
-  max-height: 250px;
-  margin-bottom: 20px;
-}
-
 .service-box {
   max-width: 400px;
 }
@@ -290,7 +240,7 @@ header.masthead p {
   text-align: center;
   opacity: 0;
   color: #fff;
-  background: rgba(0, 174, 0, 0.9);
+  background: rgba(240, 95, 64, 0.9);
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
@@ -338,11 +288,7 @@ header.masthead p {
 }
 
 .text-primary {
-  color: #93DC00 !important;
-}
-
-.text-dark {
-  color: #212529 !important;
+  color: #F05F40 !important;
 }
 
 .btn {
@@ -350,7 +296,7 @@ header.masthead p {
   text-transform: uppercase;
   border: none;
   border-radius: 300px;
-  font-family: Corbert, 'Helvetica Neue', Arial, sans-serif !important;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .btn-xl {
@@ -358,34 +304,16 @@ header.masthead p {
 }
 
 .btn-primary {
-  background-color: #93DC00;
-  border-color: #93DC00;
-  color: rgba(0,0,0,.7);
+  background-color: #F05F40;
+  border-color: #F05F40;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   color: #fff;
-  background-color: #036016 !important;
+  background-color: #ee4b28 !important;
 }
 
 .btn-primary:active, .btn-primary:focus {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
-}
-
-.table th {
-  text-align: left!important;
-}
-
-.font-logo {
-  font-family: Castorgate, 'Helvetica Neue', Arial, sans-serif !important;
-  letter-spacing: .1em;
-}
-
-.photo {
-  max-width: 100%;
-}
-
-a.email {
-  color: #212529;
 }
